--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -348,6 +348,10 @@ a {
 /* ---------End-Places Content------------ */
 
 /* ---------Popular Destinations------------ */
+.destinations .col-lg-3 {
+  flex-basis: calc(25% - 1rem);
+  max-width:calc(25% - 1rem);
+}
 .overview {
   animation: fadeIn 1.8s ease-in-out;
   position: relative;
@@ -356,8 +360,8 @@ a {
 }
 .overview img {
   width: 100%;
-  position: relative;
-  object-fit: contain;
+  height: 100%;
+  object-fit: cover;
   border-radius: 3px;
 }
 .destination-overlay {
@@ -369,8 +373,6 @@ a {
   bottom: 0;
   width: 100%;
   height: 100%;
-  padding: var(--spacing);
-  padding-bottom: 25px;
   transition: all 0.4s ease-out;
   opacity: 0;
   background-clip: content-box;
@@ -384,6 +386,10 @@ a {
 @media screen and (max-width: 767px) {
   a {
     font-size: 0.7rem;
+  }
+  .destinations .col-md-6 {
+    flex-basis: calc(50% - 1rem);
+    max-width:calc(50% - 1rem);
   }
 }
 /* ---------End-Popular Destinations------------ */
